[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "snmp"
description = "A user-friendly SNMP library"
version = "0.7.2"
authors = [
    {name = "Charles C. D. Tolley", email = "charlescdtolley@protonmail.com"},
]
dependencies = [
    "pycryptodome>=3.4",
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking",
]

[project.urls]
Documentation = "https://python-snmp.readthedocs.io"
Source = "https://github.com/charlestolley/python-snmp"

[tool.flit.sdist]
exclude = [
    "**/*.c",
    "**/*.o",
    "**/*.so",
    "**/.*.sw?",
]
