[metadata]
author = Charles Tolley
author_email = charlestolley@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Networking
description = A minimal SNMP implementation
license = GPLv3+
long_description = file: README.md
long_description_content_type = text/markdown
name = snmp
url = https://github.com/charlestolley/python-snmp
version = 0.1.7

[options]
packages = find:
python_requires = >=3, <4
