[metadata]
author = Charles C. D. Tolley
author_email = charlescdtolley@protonmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Networking
description = A user-friendly SNMP library
license = MIT
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = snmp
url = https://github.com/charlestolley/python-snmp
version = 0.3.1

[options]
packages =
    snmp
    snmp.cffi.openssl
    snmp.manager
    snmp.message
    snmp.security
    snmp.security.usm
    snmp.security.usm.priv
    snmp.smi
    snmp.transport
    snmp.transport.nt
    snmp.transport.posix
python_requires = >=3.6
